y.output
Terminals unused in grammar

    LOGICAL_AND
    LOGICAL_OR
    NO_REDIRECT


Grammar

    0 $accept: cmd_line $end

    1 cmd_line: cmd_line separator COMMAND parameters
    2         | COMMAND parameters
    3         | cmd_line BACKGROUND
    4         | cmd_line SEMICOLON
    5         | ε
    6         | error

    7 separator: BACKGROUND
    8          | PIPE
    9          | PIPE_ERROR
   10          | SEMICOLON

   11 parameters: parameters OPTION
   12           | parameters STRING
   13           | parameters WORD
   14           | parameters REDIRECT_IN FILENAME
   15           | parameters REDIRECT_OUT FILENAME
   16           | parameters REDIRECT_ERROR FILENAME
   17           | parameters APPEND FILENAME
   18           | parameters APPEND_ERROR FILENAME
   19           | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6
    WORD <string> (258) 13
    COMMAND <string> (259) 1 2
    FILENAME <string> (260) 14 15 16 17 18
    BACKGROUND <int> (261) 3 7
    PIPE <int> (262) 8
    PIPE_ERROR <int> (263) 9
    SEMICOLON <int> (264) 4 10
    REDIRECT_IN <int> (265) 14
    REDIRECT_OUT <int> (266) 15
    REDIRECT_ERROR <int> (267) 16
    APPEND <int> (268) 17
    APPEND_ERROR <int> (269) 18
    OPTION <string> (270) 11
    STRING <string> (271) 12
    LOGICAL_AND <int> (272)
    LOGICAL_OR <int> (273)
    NO_REDIRECT <int> (274)


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    cmd_line (21)
        on left: 1 2 3 4 5 6
        on right: 0 1 3 4
    separator (22)
        on left: 7 8 9 10
        on right: 1
    parameters (23)
        on left: 11 12 13 14 15 16 17 18 19
        on right: 1 2 11 12 13 14 15 16 17 18


State 0

    0 $accept: • cmd_line $end

    error    shift, and go to state 1
    COMMAND  shift, and go to state 2

    $end        reduce using rule 5 (cmd_line)
    BACKGROUND  reduce using rule 5 (cmd_line)
    PIPE        reduce using rule 5 (cmd_line)
    PIPE_ERROR  reduce using rule 5 (cmd_line)
    SEMICOLON   reduce using rule 5 (cmd_line)

    cmd_line  go to state 3


State 1

    6 cmd_line: error •

    $default  reduce using rule 6 (cmd_line)


State 2

    2 cmd_line: COMMAND • parameters

    $default  reduce using rule 19 (parameters)

    parameters  go to state 4


State 3

    0 $accept: cmd_line • $end
    1 cmd_line: cmd_line • separator COMMAND parameters
    3         | cmd_line • BACKGROUND
    4         | cmd_line • SEMICOLON

    $end        shift, and go to state 5
    BACKGROUND  shift, and go to state 6
    PIPE        shift, and go to state 7
    PIPE_ERROR  shift, and go to state 8
    SEMICOLON   shift, and go to state 9

    separator  go to state 10


State 4

    2 cmd_line: COMMAND parameters •
   11 parameters: parameters • OPTION
   12           | parameters • STRING
   13           | parameters • WORD
   14           | parameters • REDIRECT_IN FILENAME
   15           | parameters • REDIRECT_OUT FILENAME
   16           | parameters • REDIRECT_ERROR FILENAME
   17           | parameters • APPEND FILENAME
   18           | parameters • APPEND_ERROR FILENAME

    WORD            shift, and go to state 11
    REDIRECT_IN     shift, and go to state 12
    REDIRECT_OUT    shift, and go to state 13
    REDIRECT_ERROR  shift, and go to state 14
    APPEND          shift, and go to state 15
    APPEND_ERROR    shift, and go to state 16
    OPTION          shift, and go to state 17
    STRING          shift, and go to state 18

    $default  reduce using rule 2 (cmd_line)


State 5

    0 $accept: cmd_line $end •

    $default  accept


State 6

    3 cmd_line: cmd_line BACKGROUND •
    7 separator: BACKGROUND •

    COMMAND   reduce using rule 7 (separator)
    $default  reduce using rule 3 (cmd_line)


State 7

    8 separator: PIPE •

    $default  reduce using rule 8 (separator)


State 8

    9 separator: PIPE_ERROR •

    $default  reduce using rule 9 (separator)


State 9

    4 cmd_line: cmd_line SEMICOLON •
   10 separator: SEMICOLON •

    COMMAND   reduce using rule 10 (separator)
    $default  reduce using rule 4 (cmd_line)


State 10

    1 cmd_line: cmd_line separator • COMMAND parameters

    COMMAND  shift, and go to state 19


State 11

   13 parameters: parameters WORD •

    $default  reduce using rule 13 (parameters)


State 12

   14 parameters: parameters REDIRECT_IN • FILENAME

    FILENAME  shift, and go to state 20


State 13

   15 parameters: parameters REDIRECT_OUT • FILENAME

    FILENAME  shift, and go to state 21


State 14

   16 parameters: parameters REDIRECT_ERROR • FILENAME

    FILENAME  shift, and go to state 22


State 15

   17 parameters: parameters APPEND • FILENAME

    FILENAME  shift, and go to state 23


State 16

   18 parameters: parameters APPEND_ERROR • FILENAME

    FILENAME  shift, and go to state 24


State 17

   11 parameters: parameters OPTION •

    $default  reduce using rule 11 (parameters)


State 18

   12 parameters: parameters STRING •

    $default  reduce using rule 12 (parameters)


State 19

    1 cmd_line: cmd_line separator COMMAND • parameters

    $default  reduce using rule 19 (parameters)

    parameters  go to state 25


State 20

   14 parameters: parameters REDIRECT_IN FILENAME •

    $default  reduce using rule 14 (parameters)


State 21

   15 parameters: parameters REDIRECT_OUT FILENAME •

    $default  reduce using rule 15 (parameters)


State 22

   16 parameters: parameters REDIRECT_ERROR FILENAME •

    $default  reduce using rule 16 (parameters)


State 23

   17 parameters: parameters APPEND FILENAME •

    $default  reduce using rule 17 (parameters)


State 24

   18 parameters: parameters APPEND_ERROR FILENAME •

    $default  reduce using rule 18 (parameters)


State 25

    1 cmd_line: cmd_line separator COMMAND parameters •
   11 parameters: parameters • OPTION
   12           | parameters • STRING
   13           | parameters • WORD
   14           | parameters • REDIRECT_IN FILENAME
   15           | parameters • REDIRECT_OUT FILENAME
   16           | parameters • REDIRECT_ERROR FILENAME
   17           | parameters • APPEND FILENAME
   18           | parameters • APPEND_ERROR FILENAME

    WORD            shift, and go to state 11
    REDIRECT_IN     shift, and go to state 12
    REDIRECT_OUT    shift, and go to state 13
    REDIRECT_ERROR  shift, and go to state 14
    APPEND          shift, and go to state 15
    APPEND_ERROR    shift, and go to state 16
    OPTION          shift, and go to state 17
    STRING          shift, and go to state 18

    $default  reduce using rule 1 (cmd_line)
